--- a/myGuide/app/src/main/res/layout/activity_general_signup.xml
+++ b/myGuide/app/src/main/res/layout/activity_general_signup.xml
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvErrorSignUp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLinkedinSignup"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
