--- a/myGuide/app/src/main/res/layout/activity_student_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_student_setup.xml
@@ -1,9 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.StudentSetupActivity">
+    android:layout_gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".ui.StudentSetupActivity"
+        android:paddingBottom="10dp">
+
+        <ImageButton
+            android:id="@+id/ibSelectProfile"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="40dp"
+            android:background="@color/white"
+            android:foregroundGravity="center"
+            android:src="@drawable/user_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvPhonenumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="39dp"
+            android:text="Phone number"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ibSelectProfile" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/phonenumber_text_input_layout"
+            android:layout_width="300dp"
+            android:layout_height="0dp"
+
+            android:layout_marginTop="8dp"
+            app:boxBackgroundColor="#F6F3F3"
+            app:boxStrokeColor="#FBFBFB"
+            app:endIconTint="#F6F4F4"
+            app:hintTextColor="@color/light_blue"
+            app:layout_constraintStart_toStartOf="@+id/tvPhonenumber"
+            app:layout_constraintTop_toBottomOf="@+id/tvPhonenumber">
+
+            <EditText
+                android:id="@+id/etPhonenumber"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:background="@drawable/login_edit_text_border"
+                android:hint="Phone number"
+                android:minWidth="200sp" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <TextView
+            android:id="@+id/tvZipCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Zip code"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/phonenumber_text_input_layout"
+            app:layout_constraintTop_toBottomOf="@+id/phonenumber_text_input_layout" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/zipcode_text_input_layout"
+            android:layout_width="300dp"
+            android:layout_height="0dp"
+
+            android:layout_marginTop="8dp"
+            app:boxBackgroundColor="#F6F3F3"
+            app:boxStrokeColor="#FBFBFB"
+            app:endIconTint="#F6F4F4"
+            app:hintTextColor="@color/light_blue"
+            app:layout_constraintStart_toStartOf="@+id/tvZipCode"
+            app:layout_constraintTop_toBottomOf="@+id/tvZipCode" >
+
+            <EditText
+                android:id="@+id/etZipcode"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:background="@drawable/login_edit_text_border"
+                android:hint="Zip code"
+                android:minWidth="200sp" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/btnChangeProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="28dp"
+            android:backgroundTint="#E1CDCD"
+            android:text="Change"
+            app:layout_constraintStart_toEndOf="@+id/ibSelectProfile"
+            app:layout_constraintTop_toTopOf="@+id/ibSelectProfile" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
