--- a/myGuide/app/src/main/res/layout/activity_splash.xml
+++ b/myGuide/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SplashActivity">
+    tools:context=".ui.SplashActivity"
+    android:theme="@style/Theme.RemoveSplashScreenTheme">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
