--- a/myGuide/app/src/main/res/drawable/login_background.xml
+++ b/myGuide/app/src/main/res/drawable/login_background.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:angle="50"
-                android:startColor="#A8DFEE"
+                android:startColor="#0000"
                 android:endColor="#FFFFFF"
                 android:type="linear" />
         </shape>
