--- a/myGuide/app/src/main/res/drawable/splash_screen_drawable.xml
+++ b/myGuide/app/src/main/res/drawable/splash_screen_drawable.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@color/white"/>
-    <item
-        android:drawable="@drawable/launch_icon"
-        android:gravity="center"/>
+        android:drawable="@drawable/ic_splashscreen_background"/>
+
 </layer-list>
