--- a/myGuide/app/src/main/res/layout/activity_student_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_student_setup.xml
@@ -15,7 +15,7 @@
         android:paddingBottom="10dp">
 
         <ImageButton
-            android:id="@+id/ibSelectProfile"
+            android:id="@+id/ibProfile"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="40dp"
@@ -34,10 +34,11 @@
             android:layout_marginTop="39dp"
             android:text="Phone number"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#03A9F4"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ibSelectProfile" />
+            app:layout_constraintTop_toBottomOf="@+id/ibProfile" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/phonenumber_text_input_layout"
@@ -56,9 +57,10 @@
                 android:id="@+id/etPhonenumber"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:background="@drawable/login_edit_text_border"
+                android:ems="10"
                 android:hint="Phone number"
+                android:inputType="phone"
                 android:minWidth="200sp" />
 
 
@@ -72,6 +74,7 @@
             android:layout_marginTop="16dp"
             android:text="Zip code"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#2196F3"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/phonenumber_text_input_layout"
@@ -94,25 +97,38 @@
                 android:id="@+id/etZipcode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:ems="10"
+                android:inputType="number"
                 android:background="@drawable/login_edit_text_border"
                 android:hint="Zip code"
-                android:minWidth="200sp" />
+                android:minWidth="200sp"  />
 
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <Button
-            android:id="@+id/btnChangeProfile"
+        <ImageButton
+            android:id="@+id/ibAddProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="-5dp"
+            android:background="@drawable/add_profile_studentsetup_background"
+            app:layout_constraintBottom_toBottomOf="@+id/ibProfile"
+            app:layout_constraintStart_toEndOf="@+id/ibProfile"
+            app:layout_constraintTop_toTopOf="@+id/ibProfile"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@android:drawable/ic_input_add" />
+
+        <Button
+            android:id="@+id/btnRegisterStudent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:backgroundTint="#E1CDCD"
-            android:text="Change"
-            app:layout_constraintStart_toEndOf="@+id/ibSelectProfile"
-            app:layout_constraintTop_toTopOf="@+id/ibSelectProfile" />
+            android:backgroundTint="#2196F3"
+            android:text="Register"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/zipcode_text_input_layout" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
