--- a/myGuide/app/src/main/res/values/colors.xml
+++ b/myGuide/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#E8ECEE</color>
+    <color name="Mint_green">#A2E4B8</color>
+    <color name="Platinum">#E5E8E8</color>
+    <color name="blue">#0D8ECF</color>
 
 </resources>
