Take care of edge cases when a user logins in with linkedin

--- a/myGuide/app/src/main/res/layout/activity_login.xml
+++ b/myGuide/app/src/main/res/layout/activity_login.xml
@@ -131,8 +131,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="Invalid Username/Password"
-                android:textColor="#BC0909"
-                android:visibility="invisible"
+                android:textColor="@color/white"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
