--- a/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
@@ -7,17 +7,79 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/zipcode_text_input_layout_find_tutor"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
 
-    <TextView
-        android:id="@+id/textView4"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="40dp"
+        app:boxBackgroundColor="#F6F3F3"
+        app:boxStrokeColor="#FBFBFB"
+        app:endIconTint="#F6F4F4"
+        app:hintTextColor="@color/light_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/etZipcode"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/login_edit_text_border"
+            android:ems="10"
+            android:hint="Zip code (optional)"
+            android:inputType="number"
+            android:minWidth="200sp" />
+
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.androidbuts.multispinnerfilter.SingleSpinnerSearch
+        android:id="@+id/singleItemSelectionSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/login_edit_text_border"
+        android:minHeight="60dp"
+        app:hintText="Single a course (required)"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/zipcode_text_input_layout_find_tutor" />
+
+
+
+    <EditText
+        android:id="@+id/etPriceFind"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/login_edit_text_border"
+        android:ems="10"
+        android:hint="Price (optional)"
+        android:inputType="number"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/singleItemSelectionSpinner" />
+
+    <Button
+        android:id="@+id/btnFindTutor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#2196F3"
         android:text="Find"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/etPriceFind" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
