--- a/myGuide/app/src/main/res/values/colors.xml
+++ b/myGuide/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="light_blue">#E8ECEE</color>
     <color name="Mint_green">#A2E4B8</color>
     <color name="Platinum">#E5E8E8</color>
-    <color name="blue">#0D8ECF</color>
+    <color name="blue">#2196F3</color>
     <color name="red">#F02E00</color>
 
 </resources>
