--- a/myGuide/app/src/main/res/layout/fragment_search_result.xml
+++ b/myGuide/app/src/main/res/layout/fragment_search_result.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvDetailedAbout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -52,9 +52,35 @@
         android:id="@+id/rvSearchResults"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardviewTitleResults" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLocal" />
+
+    <Button
+        android:id="@+id/btnLocal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/white"
+        android:text="local"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toStartOf="@+id/btnOnline"
+        app:layout_constraintTop_toBottomOf="@+id/cardviewTitleResults"
+        app:strokeColor="#2196F3"
+        app:strokeWidth="2dp" />
+
+    <Button
+        android:id="@+id/btnOnline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="116dp"
+        android:backgroundTint="@color/blue"
+        android:text="Online"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnLocal"
+        app:strokeColor="#2196F3"
+        app:strokeWidth="2dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
