--- a/myGuide/app/src/main/res/layout/activity_login.xml
+++ b/myGuide/app/src/main/res/layout/activity_login.xml
@@ -180,7 +180,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvDetailedAbout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
