--- a/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
@@ -156,7 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="Price"
+            android:text="Price per hour"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
